Bug 203220 - Keyboard shortcut for "Copy" assigned twice in mail viewer
Summary: Keyboard shortcut for "Copy" assigned twice in mail viewer
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 193649 204622 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-09 22:38 UTC by Georg Wittenburg
Modified: 2009-08-29 14:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Georg Wittenburg 2009-08-09 22:38:52 UTC
Version:            (using KDE 4.3.0)
Installed from:    Debian testing/unstable Packages

Copy&paste is slightly broken in the mail viewer component of KMail.

How to reproduce:
1) Start Kontact / switch to KMail
2) Double-click on any mail to open it in a separate window
3) Select some text in the new window
4) Press Ctrl-C
-> You get an error message about the keyboard shortcut being ambiguous.

When looking at Seetings->Configure Shortcuts... in the same window (!), you'll see that there are actually two (!) entries for "Copy", both of which are mapped to Ctrl-C/Ctrl-Ins.

I guess there should only be one entry in the shortcut list for "Copy" to make everything work as expected.
Comment 1 FiNeX 2009-08-10 16:03:38 UTC
I can reproduce this bug in trunk too.
Comment 2 Martin Koller 2009-08-12 23:27:06 UTC
SVN commit 1010578 by mkoller:

BUG: 203220

remove duplicate copy action



 M  +0 -3      kmreadermainwin.cpp  
 M  +1 -1      kmreadermainwin.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1010578
Comment 3 Christophe Marin 2009-08-21 09:34:03 UTC
*** Bug 204622 has been marked as a duplicate of this bug. ***
Comment 4 Martin Koller 2009-08-29 14:48:23 UTC
*** Bug 193649 has been marked as a duplicate of this bug. ***