BUG: 203220

remove duplicate copy action


svn path=/trunk/KDE/kdepim/; revision=1010578